--- a/src/components/CreateTodoButton/CreateTodoButton.css
+++ b/src/components/CreateTodoButton/CreateTodoButton.css
@@ -18,8 +18,11 @@
 
   transform: rotate(0);
   transition: .3s ease;
+  z-index: 1;
 }
 
-.CreateTodoButton:hover {
+.CreateTodoButton--close {
   transform: rotate(224deg);
+  
+  background-color: red;
 }
